Fluid Simulations Speed factor animated wrong result #33467

Closed
opened 2012-12-10 21:59:19 +01:00 by Everton Schneider · 6 comments

%%%I'm using trunk build r52860. Fresh new 2.65!!!
Every time I try to simulate a fluid in slow-mo through the speed factor animated values the result is always the same:
the fluid motion stop for few frames and then playback again at normal speed.

To reproduce this simply use the "Quick Fluid" operator on default cube and animate the "speed" from default value(1.000) to something lower(0.300) and run the simulation.
The result is always wrong...%%%

%%%I'm using trunk build r52860. Fresh new 2.65!!! Every time I try to simulate a fluid in slow-mo through the speed factor animated values the result is always the same: the fluid motion stop for few frames and then playback again at normal speed. To reproduce this simply use the "Quick Fluid" operator on default cube and animate the "speed" from default value(1.000) to something lower(0.300) and run the simulation. The result is always wrong...%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed, assigning to Daniel.%%%

%%%Confirmed, assigning to Daniel.%%%
Member

%%%Hey,

can you provide an example blend :-) (I'm somewhat new animating properties) %%%

%%%Hey, can you provide an example blend :-) (I'm somewhat new animating properties) %%%

%%%Attach a .blend file now, and a patch that seems like it fixes the issue. I don't know if there's a difference between framenum and mSimFrameCnt, but the latter seems like it would have the potential to go out of sync so I removed it.%%%

%%%Attach a .blend file now, and a patch that seems like it fixes the issue. I don't know if there's a difference between framenum and mSimFrameCnt, but the latter seems like it would have the potential to go out of sync so I removed it.%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33467
No description provided.