Bugfix [#33467] Fluid Simulations Speed factor animated wrong result

Thanks to Brecht for providing a patch and example blend.
I changed and extended it a bit since there was another bug in that loop.